# tech-sup-tools-service

./: .gitignore  Dockerfile-backend  Dockerfile-frontend  Dockerfile-logstash  docker-compose.yaml
backend/: main.py  pyproject.toml
backend/src/: config.py
backend/src/database/: base.py  db.py
backend/src/database/models/: aes.py  client.py  company.py  interface.py  service.py
backend/src/database/models/pg/: service.py
backend/src/models/: user.py
backend/src/routers/: auth.py  company.py  contact.py  interface.py  jira_actions.py  netbox.py  search.py  service.py  service_docs.py  zabbix.py
backend/src/utils/: auth.py  clients.py  company.py  es_data.py  interface.py  jira_utils.py  netbox.py  services.py  zabbix.py
backend/src/utils/pg/: service.py
elasticsearch/: init-es.sh
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.module.less  main.jsx
frontend/src/components/: navbar.jsx  pageTemplate.jsx
frontend/src/components/company/: companyInfo.jsx  companyServicesTable.jsx
frontend/src/components/forms/: netboxCreateDevice.jsx  netboxCreateSite.jsx
frontend/src/components/home/: combineResponses.js  companyCard.jsx  jiraTicketsModal.jsx  phoneSearch.jsx  searchBar.jsx  searchModeSelector.jsx  serviceBriefInfo.jsx  serviceCard.jsx  serviceInfo.jsx
frontend/src/components/service/: commentCard.jsx  dicts.js  interfacesTable.jsx  serviceInfo.jsx  serviceLinksCard.jsx  techInfoTable.jsx  wifiSetupTable.jsx
frontend/src/pages/: 404page.jsx  auth.jsx  company.jsx  forms.jsx  home.jsx  service.jsx  settings.jsx
frontend/src/utils/: checkTokenValidity.js  components.jsx  shortcuts.js  svgRenderer.jsx  useWindowSize.js
logstash/config/: logstash.yml
logstash/pipeline/: logstash.conf
postgres/initdb/: init.sql
